src/objects/ensxapp__SAP_Doc_Flow_Type_Config__mdt.object
<CustomObject>
    <description>SAP Doc Flow types and configuration options for how to route them to specific documents</description>
    <fields>
        <fullName>ensxapp__Document_Category__c</fullName>
        <description>SAP Document Category code</description>
        <inlineHelpText>The internal SAP document category code</inlineHelpText>
        <label>Document Category</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ensxapp__Tab_Name__c</fullName>
        <description>The name of the Tab in Salesforce that this document type redirects to when the record is clicked to view details</description>
        <label>Tab Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Tab_Namespace__c</fullName>
        <description>The namespace the Tab is in inside of Salesforce</description>
        <label>Tab Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SAP Doc Flow Type Config</label>
    <pluralLabel>SAP Doc Flow Type Configs</pluralLabel>
</CustomObject>